# OpenGLVM

./: README.md
code/: CMakeLists.txt
code/CodeGenerator/: CMakeLists.txt  main.cpp
code/OGLIFBuilder/: CMakeLists.txt
code/OGLIFBuilder/src/: main.cpp
code/OGLIFBuilder/view/: Application.qml  CodeTreeModel.qml  LocaleMaterialsModel.qml  RemoteBrowser.qml  VariablesModel.qml
code/OGLIFBuilder/view/Components/: TreeView.qml  qmldir
code/OGLVMBuilder/: OGLVMBuilder.sln
code/OGLVMBuilder/OGLVMBuilder/: App.xaml  App.xaml.cs  GLSpec.cs  MainWindow.xaml  MainWindow.xaml.cs  OGLVMBuilder.csproj  SectionDialog.xaml  SectionDialog.xaml.cs
code/OGLVMBuilder/OGLVMBuilder/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
code/RGLStudio/: CMakeLists.txt
code/RGLStudio/include/: MainWindow.hpp
code/RGLStudio/src/: MainWindow.cpp  OpenGLHeader.cpp  main.cpp
code/imgui/: CMakeLists.txt
code/libOGLIF/: CMakeLists.txt
code/libOGLIF/include/: IntermediateTree.hpp  Nodes.hpp  OpenGLTraits.hpp  SmallObjectAllocator.hpp  StackAllocator.hpp  libOGLIF.h
code/libOGLIF/src/: InterMediateTree.cpp  Nodes.cpp  SmallObjectAllocator.cpp  StackAllocator.cpp  libOGLIF.cpp
code/libOGLIF/tests/: main.cpp
code/libOGLIF/tests/CInterface/: API.cpp
code/libOGLIF/tests/Memory/: StackAllocator.cpp
code/libSpec/: CMakeLists.txt
code/libSpec/include/: libSpec.h
code/libSpec/src/: libSpec.cpp
code/technology/: Allocator.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
code/technology/ComponentManagers/: Renderer.cpp  Renderer.hpp
code/technology/Components/: CameraBehaviour.hpp  Identifiers.hpp  RenderBehaviour.hpp  RendererMessage.hpp
code/technology/SharedAttributes/: Identifiers.hpp  Transform.hpp
work/: vmbytecode.graphml
