AddSourceDirectoryRecursive(fileSrcList "." "Source")
AddHeaderDirectoryRecursive(fileHdrList "include" "Includes")
set(OGLVMCODEGENERATOR_FILES ${fileSrcList} ${fileHdrList})
Generate(EXECUTABLE OGLVMCODEGENERATOR OGLVMCodeGenerator "Tools")
target_include_directories(OGLVMCodeGenerator PRIVATE include/)
target_link_libraries(OGLVMCodeGenerator LibOpenGLSpecification)
AddDependency(OGLVMCODEGENERATOR LibOpenGLSpecification)
AddDependency(OGLVMCODEGENERATOR RadonFramework)
Finalize(OGLVMCODEGENERATOR)