set(CMAKE_INCLUDE_CURRENT_DIR ON)
AddSourceDirectoryRecursive(designerSourceList "src" "Source")
AddHeaderDirectoryRecursive(designerHeaderList "src" "Includes")
set(OGLIFBUILDER_FILES ${designerSourceList} ${designerHeaderList})
set(CMAKE_AUTOMOC ON CACHE BOOL "" FORCE)
set(CMAKE_AUTOUIC ON CACHE BOOL "" FORCE)
set(CMAKE_INCLUDE_CURRENT_DIR ON CACHE BOOL "" FORCE)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Qml REQUIRED)
Generate(EXECUTABLE OGLIFBUILDER OGLIFBuilder "Frontend")
AddDependency(OGLIFBUILDER libSpec libOGLIF)
target_link_libraries(OGLIFBuilder Qt5::Widgets Qt5::Qml)
AddResources(OGLIFBUILDER "view/" "view/")
Finalize(OGLIFBUILDER)