AddSourceDirectoryRecursive(designerSourceList "src" "Source")
AddHeaderDirectoryRecursive(designerHeaderList "src" "Includes")
set(OGLIFBUILDER_FILES ${designerSourceList} ${designerHeaderList})
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Qml REQUIRED)
Generate(EXECUTABLE OGLIFBUILDER OGLIFBuilder "Frontend")
AddDependency(OGLIFBUILDER LibOpenGLSpecification libOGLIF RadonFramework)
target_link_libraries(OGLIFBuilder Qt5::Widgets Qt5::Qml LibOpenGLSpecification RadonFramework)
AddResources(OGLIFBUILDER "view/" "view/")
Finalize(OGLIFBUILDER)